--- a/imports/App.css
+++ b/imports/App.css
@@ -1,8 +1,18 @@
 .circle {
-    width: 50px;
-    height: 50px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    border-radius: 25px;
-    background: black;
-  }
+  width: 50px;
+  height: 50px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+  background: black;
+  font-size: large;
+  color: white;
+  text-align: center;
+  display:inline-block;
+  margin-bottom: 50px;
+  cursor: pointer;
+}
+
+
+
+
